# blaz-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  main.cpp  run.sh
assets/scenes/: scene.json
media/videos/: depth_buffering.webm  moving_rectangle.webm  moving_rectangle_texture.webm
notes/: hello_triangle.md
shaders/: shader.slang
src/: Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Scene.cpp  Scene.hpp  Swapchain.cpp  Swapchain.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp
src/shaders/: compile.sh  scene.slang  shader.slang  shadow.slang  sky.slang
